k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-static-svc
  namespace: static
spec:
  selector:
    app: static
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
 # type: LoadBalancer
